--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -8,6 +8,10 @@
   width: 85vw;
   margin: 0 auto;
   padding: 30px 0;
+  & a:hover{
+    text-decoration: underline;
+    color: var(--yellow);
+  }
 }
 .footer-container p, .footer-container a, .footer-container span{
   opacity: 0.8;
@@ -15,7 +19,7 @@
 .footer a{
   display: block;
   color: #fff;
-  text-decoration: none;
+  // text-decoration: none;
 }
 .social-icons{
   list-style: none;
@@ -51,7 +55,7 @@
       text-align: left;
   }
   .footer-container{
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
   }
   .footer-container div:nth-child(1) p{
       padding-right: 20px;
@@ -63,3 +67,4 @@
       align-items: center;
   }
 }
+
