--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -11,7 +11,26 @@
 }
 .room-text{
   padding: 5px 20px;
+  & img{
+    width:120px;
+    height: 70px;
+    margin:10px;
+  }
+  & button:hover{
+    background-color:var(--dark);
+    color: var(--yellow);
+    border: solid #fff 1px; 
+    transform: scale(1.1);
+  }
 }
+.room-text img:hover{
+  transform: scale(4.4);
+  transition: var(--transition);
+}
+.pictures{
+  display: flex;
+  }
+
 .room-text h3{
   font-size: 24px;
 }
