--- a/src/components/Service/styles.scss
+++ b/src/components/Service/styles.scss
@@ -2,7 +2,8 @@
 .title{
   text-transform: uppercase;
   letter-spacing: 3px;
-  font-size: 30px;
+  font-size: 50px;
+  font-weight:900;
   color: var(--yellow);
   border-bottom: 5px solid var(--dark);
   width: 235px;
@@ -40,6 +41,25 @@
   background: var(--yellow);
   color: #fff;
 }
+
+.box{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  min-height: 50vh;
+  border: 1px red;
+}
+
+.modal{
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+}
+button:focus +.modal {
+  opacity: 1;
+  
+}
+
 @media(min-width: 992px){
   .services-container{
       display: grid;
