--- a/src/components/Forms/styles.scss
+++ b/src/components/Forms/styles.scss
@@ -3,6 +3,11 @@
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../../assets/images/img1.jpg") center/cover no-repeat;
   color: #fff;
   padding: 40px 60px;
+
+  
+}
+.spanName{
+  color: coral;
 }
 .book-form{
   display: grid;
@@ -57,6 +62,33 @@ select, textarea {
   box-shadow: 0 0 2px rgba(51, 51, 51, 0.3);
 }
 
+
+.formModal_container{
+  display:flex;
+  align-items: center;
+  justify-content:center;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  // opacity: 0;
+  // visibility: hidden;
+  // pointer-events: none;
+  top: 25%;
+  left: 25%;
+  width: 100vh;
+  height:50vh;
+}
+
+
+.mod{
+  color:black;
+  background-color: #fff;
+  padding:30px 30px;
+  border-radius: 5px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.2);
+  width: 600px;
+  max-width: 100%;
+  text-align: center;
+}
 
 
 
